[package]
name = "chapter-3"
version = "0.1.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]

[dependencies]
futures = "0.1"
libp2p-core = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
libp2p-floodsub = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
libp2p-identify = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
libp2p-kad = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
libp2p-mplex = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
libp2p-peerstore = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
libp2p-websocket = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
rand = "0.4"
tokio-io = "0.1"
tokio-stdin = "0.1"
tokio-timer = "0.1"

[target.'cfg(target_os = "emscripten")'.dependencies]
stdweb = { version = "0.1.3", default-features = false }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
libp2p-tcp-transport = { git = "https://github.com/tomaka/libp2p-rs", branch = "libp2p-facade" }
tokio-core = "0.1"
